--- a/docker/lab_02/stack.yml
+++ b/docker/lab_02/stack.yml
@@ -4,7 +4,7 @@ volumes:
   vol_maria:
 
 services:
-  db:
+  mariadb:
     image: mariadb:10.6
     restart: always
     volumes:
@@ -12,7 +12,7 @@ services:
     environment:
       MYSQL_ROOT_PASSWORD: notSecureChangeMe
 
-  app:
+  phpmyadmin:
     image: phpmyadmin
     restart: always
     ports:
