Anonimização de dado

--- a/docker/training_devops_pro/lab_03/stack.yml
+++ b/docker/training_devops_pro/lab_03/stack.yml
@@ -20,5 +20,5 @@ services:
     ports:
      - 6543:80
     environment:
-      PGADMIN_DEFAULT_EMAIL: "tavares90.joao@gmail.com"
+      PGADMIN_DEFAULT_EMAIL: "email@domain.com"
       PGADMIN_DEFAULT_PASSWORD: "PgAdmin2023!"
